--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -158,7 +158,7 @@ import {River} from '@primer/react-brand'
 | `imageTextRatio` | `'50:50'`, `'60:40'`           | <PropTableValues values={[defaultRiverImageTextRatio]} /> | The aspect ratio applied to the image in relation to the adjacent text. Affects overall layout proportions. |
 | `className`      | `string`                       |                                                           | Sets a custom class on the root element                                                                     |
 | `id`             | `string`                       |                                                           | Sets a custom id                                                                                            |
-| `ref`            | `React.RefObject`              |                                                           | Access to elements                                                                                          |
+| `ref`            | `React.RefObject`              |                                                           | Forward a Ref to the underlying DOM node                                                                    |
 
 ### River.Visual <Label>Required</Label>
 
@@ -180,4 +180,4 @@ import {River} from '@primer/react-brand'
 | `children`  | [`Text`](https://primer.style/react-brand/components/Text),[`Heading`](https://primer.style/react-brand/components/Heading), [`Link`](https://primer.style/react-brand/components/Link) |         | Content that corrosponds to the adjacent visual. |
 | `className` | `string`                                                                                                                                                                                |         | Sets a custom class on the root element          |
 | `id`        | `string`                                                                                                                                                                                |         | Sets a custom id                                 |
-| `ref`       | `React.RefObject`                                                                                                                                                                       |         | Access to elements                               |
+| `ref`       | `React.RefObject`                                                                                                                                                                       |         | Forward a Ref to the underlying DOM node         |
