--- a/docs/content/components/Hero.mdx
+++ b/docs/content/components/Hero.mdx
@@ -57,13 +57,13 @@ import {Hero} from '@primer/react-brand'
 
 ### Hero
 
-| Name                                    | Type                                                                                                               |  Default  | Description                             |
-| :-------------------------------------- | :----------------------------------------------------------------------------------------------------------------- | :-------: | :-------------------------------------- |
-| `heading` <Label>Required</Label>       | `string`                                                                                                           |           | Primary heading, which defaults to a H1 |
-| `primaryAction` <Label>Required</Label> | [Object](https://github.com/primer/react-brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Primary call to action                  |
-| `secondaryAction`                       | [Object](https://github.com/primer/react-brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Optional secondary call to action       |
-| `align`                                 | `'center'`, `'start'`                                                                                              | `'start'` | Optional text alignment                 |
-| `description`                           | `string`                                                                                                           |           | Optional accompanying body text         |
-| `className`                             | `string`                                                                                                           |           | Sets a custom class on the root element |
-| `id`                                    | `string`                                                                                                           |           | Sets a custom id                        |
-| `ref`                                   | `React.RefObject`                                                                                                  |           | Access to elements                      |
+| Name                                    | Type                                                                                                               |  Default  | Description                              |
+| :-------------------------------------- | :----------------------------------------------------------------------------------------------------------------- | :-------: | :--------------------------------------- |
+| `heading` <Label>Required</Label>       | `string`                                                                                                           |           | Primary heading, which defaults to a H1  |
+| `primaryAction` <Label>Required</Label> | [Object](https://github.com/primer/react-brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Primary call to action                   |
+| `secondaryAction`                       | [Object](https://github.com/primer/react-brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Optional secondary call to action        |
+| `align`                                 | `'center'`, `'start'`                                                                                              | `'start'` | Optional text alignment                  |
+| `description`                           | `string`                                                                                                           |           | Optional accompanying body text          |
+| `className`                             | `string`                                                                                                           |           | Sets a custom class on the root element  |
+| `id`                                    | `string`                                                                                                           |           | Sets a custom id                         |
+| `ref`                                   | `React.RefObject`                                                                                                  |           | Forward a Ref to the underlying DOM node |
