--- a/docs/content/getting-started/index.mdx
+++ b/docs/content/getting-started/index.mdx
@@ -3,11 +3,11 @@ title: Getting started
 path: getting-started/index
 ---
 
-Primer React Brand is [open-sourced on GitHub](https://github.com/primer/react-brand) and [available on npm](https://www.npmjs.com/package/@primer/react-brand).
+Primer Brand is [open-sourced on GitHub](https://github.com/primer/react-brand) and [available on npm](https://www.npmjs.com/package/@primer/react-brand).
 
-### 1. Install Primer React Brand
+### 1. Install Primer Brand
 
-Install Primer React Brand with [npm](https://www.npmjs.com/).
+Install Primer Brand with [npm](https://www.npmjs.com/).
 
 ```shell
 npm install @primer/react-brand
@@ -15,7 +15,7 @@ npm install @primer/react-brand
 
 ### 2. Import global stylesheets
 
-Primer React Brand requires a global stylesheet to be loaded ahead-of-time.
+Primer Brand requires a global stylesheet to be loaded ahead-of-time.
 
 #### a. Using an application bundler (e.g. Webpack)
 
