--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -8,7 +8,7 @@ import {Link, Button, Heading, Text} from '@primer/react-brand'
     mt: 5,
   }}
 >
-  <Heading as="h4">Primer React Brand</Heading>
+  <Heading as="h4">Primer Brand</Heading>
   <Text as="p">Read the installation instructions to get started.</Text>
   <Box
     sx={{
