fix additional repo rename issues

--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -1,8 +1,8 @@
 ---
 title: FAQ
 status: Experimental
-source: https://github.com/primer/react-brand/tree/main/src/FAQ/FAQ.tsx
-storybook: '/react-brand/storybook/?path=/story/components-faq--default'
+source: https://github.com/primer/brand/tree/main/src/FAQ/FAQ.tsx
+storybook: '/brand/storybook/?path=/story/components-faq--default'
 description: Display content in a Q&A format
 ---
 
