--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -1,8 +1,8 @@
 ---
 title: River
 status: Experimental
-source: https://github.com/primer/react-brand/tree/main/src/River/River.tsx
-storybook: '/react-brand/storybook/?path=/story/components-river--default'
+source: https://github.com/primer/brand/tree/main/src/River/River.tsx
+storybook: '/brand/storybook/?path=/story/components-river--default'
 description: Render text and image pairs
 ---
 
