--- a/docs/content/getting-started/index.mdx
+++ b/docs/content/getting-started/index.mdx
@@ -3,7 +3,7 @@ title: Getting started
 path: getting-started/index
 ---
 
-Primer Brand is [open-sourced on GitHub](https://github.com/primer/react-brand) and [available on npm](https://www.npmjs.com/package/@primer/react-brand).
+Primer Brand is [open-sourced on GitHub](https://github.com/primer/brand) and [available on npm](https://www.npmjs.com/package/@primer/react-brand).
 
 ### 1. Install Primer Brand
 
