--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -39,7 +39,7 @@ import {Link, Button, Heading, Text} from '@primer/react-brand'
       <Button
         as="a"
         variant="secondary"
-        href="https://github.com/primer/react-brand"
+        href="https://github.com/primer/brand"
         target="_blank"
       >
         Contribute
