--- a/docs/content/components/Heading.mdx
+++ b/docs/content/components/Heading.mdx
@@ -1,8 +1,8 @@
 ---
 title: Heading
 status: Experimental
-source: https://github.com/primer/react-brand/tree/main/src/Heading/Heading.tsx
-storybook: '/react-brand/storybook/?path=/story/components-heading--default'
+source: https://github.com/primer/brand/tree/main/src/Heading/Heading.tsx
+storybook: '/brand/storybook/?path=/story/components-heading--default'
 description: Use the Heading component to render body content
 ---
 
