--- a/docs/content/components/Text.mdx
+++ b/docs/content/components/Text.mdx
@@ -1,8 +1,8 @@
 ---
 title: Text
 status: Experimental
-source: https://github.com/primer/react-brand/tree/main/src/Text/Text.tsx
-storybook: '/react-brand/storybook/?path=/story/components-text--scale'
+source: https://github.com/primer/brand/tree/main/src/Text/Text.tsx
+storybook: '/brand/storybook/?path=/story/components-text--scale'
 description: Use the Text component to render body content
 ---
 
