Add base component prop type (#50)
* Add base component prop type

* Add BaseProps to FAQ, Heading, Accordion

* Fix prettier

* Finish adding BaseProps to components

* Add BaseProps to River

* Update River.Visual Props

* Change RefObj to Ref in BaseProps

* Correct the use of forwardRef

* Update docs for ref

* Add back propsWithChildren

* minor: update code comment

--- a/docs/content/components/Heading.mdx
+++ b/docs/content/components/Heading.mdx
@@ -51,6 +51,9 @@ The `Heading` size is determined by the type of HTML element specified. E.g. `h1
 
 ### Heading
 
-| Name | Type                                                   |                     Default                      | Description                         |
-| :--- | :----------------------------------------------------- | :----------------------------------------------: | :---------------------------------- |
-| `as` | <PropTableValues values={HeadingTags} addLineBreaks /> | <PropTableValues values={[defaultHeadingTag]} /> | Applies the underlying HTML element |
+| Name        | Type                                                   |                     Default                      | Description                              |
+| :---------- | :----------------------------------------------------- | :----------------------------------------------: | :--------------------------------------- |
+| `as`        | <PropTableValues values={HeadingTags} addLineBreaks /> | <PropTableValues values={[defaultHeadingTag]} /> | Applies the underlying HTML element      |
+| `className` | `string`                                               |                                                  | Sets a custom class on the root element  |
+| `id`        | `string`                                               |                                                  | Sets a custom id                         |
+| `ref`       | `React.RefObject`                                      |                                                  | Forward a Ref to the underlying DOM node |
