fix path prefix in docs

--- a/docs/content/index.mdx
+++ b/docs/content/index.mdx
@@ -21,7 +21,7 @@ import {Link, Button, Heading, Text} from '@primer/react-brand'
     }}
   >
     <p>
-      <Button as="a" variant="primary" href="/react-brand/getting-started">
+      <Button as="a" variant="primary" href="/brand/getting-started">
         Installation instructions
       </Button>
     </p>
@@ -29,7 +29,7 @@ import {Link, Button, Heading, Text} from '@primer/react-brand'
       <Button
         as="a"
         variant="secondary"
-        href="/react-brand/storybook"
+        href="/brand/storybook"
         target="_blank"
       >
         Storybook
