--- a/docs/content/components/FAQ.mdx
+++ b/docs/content/components/FAQ.mdx
@@ -20,101 +20,99 @@ import {FAQ} from '@primer/react-brand'
 ### Default
 
 ```jsx live
-<Container p={3}>
-  <FAQ>
-    <FAQ.Heading>Frequently asked questions</FAQ.Heading>
-    <FAQ.Item>
-      <FAQ.Question>
-        What&apos;s included in the GitHub for Startups offer?
-      </FAQ.Question>
-      <FAQ.Answer>
-        <p>
-          All GitHub for Startups companies receive up to 20 seats of GitHub
-          Enterprise for free for year one and 50% off year two. Learn more
-          about the features and capabilities of GitHub Enterprise{' '}
-          <InlineLink
-            href="https://www.github.com"
-            target="_blank"
-            rel="noreferrer"
-          >
-            here
-          </InlineLink>
-          .
-        </p>
-      </FAQ.Answer>
-    </FAQ.Item>
-    <FAQ.Item>
-      <FAQ.Question>Who is eligible to apply?</FAQ.Question>
-      <FAQ.Answer>
-        <p>
-          Startups who meet the following criteria are eligible to apply for the
-          program:
-        </p>
-        <ol>
-          <li>
-            <Text size="300" variant="muted">
-              Must be associated with a current GitHub for Startups partner.
-            </Text>
-          </li>
-          <li>
-            <Text size="300" variant="muted">
-              Self-funded or funded (Seed-Series A)
-            </Text>
-          </li>
-          <li>
-            <Text size="300" variant="muted">
-              Not a current GitHub Enterprise customer
-            </Text>
-          </li>
-          <li>
-            <Text size="300" variant="muted">
-              Must not have previously received credits for GitHub Enterprise
-            </Text>
-          </li>
-        </ol>
-      </FAQ.Answer>
-    </FAQ.Item>
-    <FAQ.Item>
-      <FAQ.Question>
-        What if my startup is not eligible? Are there other resources for me?
-      </FAQ.Question>
-      <FAQ.Answer>
-        <p>
-          If you’re not currently eligible for the GitHub for Startups but would
-          like to try GitHub Enterprise, please feel to sign up for a trial
-          <InlineLink
-            href="https://www.github.com"
-            target="_blank"
-            rel="noreferrer"
-          >
-            here
-          </InlineLink>.
-        </p>
-      </FAQ.Answer>
-    </FAQ.Item>
-    <FAQ.Item>
-      <FAQ.Question>
-        How can my organization become a GitHub for Startups partner?
-      </FAQ.Question>
-      <FAQ.Answer>
-        <p>
-          Any investor, accelerator, or startup support organization is eligible
-          to apply for the GitHub for Startups program.
-        </p>
-        <p>
-          <InlineLink
-            href="https://www.github.com"
-            target="_blank"
-            rel="noreferrer"
-          >
-            Apply here
-          </InlineLink>
-          .
-        </p>
-      </FAQ.Answer>
-    </FAQ.Item>
-  </FAQ>
-</Container>
+<FAQ>
+  <FAQ.Heading>Frequently asked questions</FAQ.Heading>
+  <FAQ.Item>
+    <FAQ.Question>
+      What&apos;s included in the GitHub for Startups offer?
+    </FAQ.Question>
+    <FAQ.Answer>
+      <p>
+        All GitHub for Startups companies receive up to 20 seats of GitHub
+        Enterprise for free for year one and 50% off year two. Learn more about
+        the features and capabilities of GitHub Enterprise{' '}
+        <InlineLink
+          href="https://www.github.com"
+          target="_blank"
+          rel="noreferrer"
+        >
+          here
+        </InlineLink>
+        .
+      </p>
+    </FAQ.Answer>
+  </FAQ.Item>
+  <FAQ.Item>
+    <FAQ.Question>Who is eligible to apply?</FAQ.Question>
+    <FAQ.Answer>
+      <p>
+        Startups who meet the following criteria are eligible to apply for the
+        program:
+      </p>
+      <ol>
+        <li>
+          <Text size="300" variant="muted">
+            Must be associated with a current GitHub for Startups partner.
+          </Text>
+        </li>
+        <li>
+          <Text size="300" variant="muted">
+            Self-funded or funded (Seed-Series A)
+          </Text>
+        </li>
+        <li>
+          <Text size="300" variant="muted">
+            Not a current GitHub Enterprise customer
+          </Text>
+        </li>
+        <li>
+          <Text size="300" variant="muted">
+            Must not have previously received credits for GitHub Enterprise
+          </Text>
+        </li>
+      </ol>
+    </FAQ.Answer>
+  </FAQ.Item>
+  <FAQ.Item>
+    <FAQ.Question>
+      What if my startup is not eligible? Are there other resources for me?
+    </FAQ.Question>
+    <FAQ.Answer>
+      <p>
+        If you’re not currently eligible for the GitHub for Startups but would
+        like to try GitHub Enterprise, please feel to sign up for a trial
+        <InlineLink
+          href="https://www.github.com"
+          target="_blank"
+          rel="noreferrer"
+        >
+          here
+        </InlineLink>.
+      </p>
+    </FAQ.Answer>
+  </FAQ.Item>
+  <FAQ.Item>
+    <FAQ.Question>
+      How can my organization become a GitHub for Startups partner?
+    </FAQ.Question>
+    <FAQ.Answer>
+      <p>
+        Any investor, accelerator, or startup support organization is eligible
+        to apply for the GitHub for Startups program.
+      </p>
+      <p>
+        <InlineLink
+          href="https://www.github.com"
+          target="_blank"
+          rel="noreferrer"
+        >
+          Apply here
+        </InlineLink>
+        .
+      </p>
+    </FAQ.Answer>
+  </FAQ.Item>
+</FAQ>
 ```
 
 ### Grouped FAQs
@@ -131,61 +129,58 @@ Use `FAQ.Subheading` to create a visual separation between your `FAQ.Question` d
 </Note>
 
 ```jsx live
-<Container p={3}>
-  <FAQ>
-    <FAQ.Heading>Frequently asked questions</FAQ.Heading>
-    <FAQ.Subheading>Subscriptions & Payments</FAQ.Subheading>
-    <FAQ.Item>
-      <FAQ.Question>
-        What are the differences between GitHub Free, GitHub Pro, GitHub Team
-        and GitHub Enterprise plans?
-      </FAQ.Question>
-      <FAQ.Answer>
-        <p>
-          GitHub Free is our basic plan created for individuals and small teams
-          to collaborate on private and public repositories.
-        </p>
-      </FAQ.Answer>
-    </FAQ.Item>
-    <FAQ.Item>
-      <FAQ.Question>How do I view and manage my subscription?</FAQ.Question>
-      <FAQ.Answer>
-        <p>
-          You can view your account's subscription, your other paid features and
-          products, and your next billing date in your account's billing
-          settings.
-        </p>
-      </FAQ.Answer>
-    </FAQ.Item>
-    <FAQ.Subheading>Actions & Packages</FAQ.Subheading>
-    <FAQ.Item>
-      <FAQ.Question>
-        Which plans include access to GitHub Actions and Packages?
-      </FAQ.Question>
-      <FAQ.Answer>
-        <p>
-          GitHub Actions and Packages are free for public repositories and
-          packages on all our current per-user plans, while private repositories
-          and packages receive a set amount of free minutes, storage, and data
-          transfer depending on the per-user plan. Legacy per-repository plans
-          (Bronze, Silver, Gold etc) do not come with access to GitHub Actions
-          and Packages but they can be upgraded to a current per-user plan.
-        </p>
-      </FAQ.Answer>
-    </FAQ.Item>
-    <FAQ.Item>
-      <FAQ.Question>
-        How do I manage my spending for Actions and Packages?
-      </FAQ.Question>
-      <FAQ.Answer>
-        <p>
-          You can manage your spending for Actions and Packages in your billing
-          settings page under the payment information tab.
-        </p>
-      </FAQ.Answer>
-    </FAQ.Item>
-  </FAQ>
-</Container>
+<FAQ>
+  <FAQ.Heading>Frequently asked questions</FAQ.Heading>
+  <FAQ.Subheading>Subscriptions & Payments</FAQ.Subheading>
+  <FAQ.Item>
+    <FAQ.Question>
+      What are the differences between GitHub Free, GitHub Pro, GitHub Team and
+      GitHub Enterprise plans?
+    </FAQ.Question>
+    <FAQ.Answer>
+      <p>
+        GitHub Free is our basic plan created for individuals and small teams to
+        collaborate on private and public repositories.
+      </p>
+    </FAQ.Answer>
+  </FAQ.Item>
+  <FAQ.Item>
+    <FAQ.Question>How do I view and manage my subscription?</FAQ.Question>
+    <FAQ.Answer>
+      <p>
+        You can view your account's subscription, your other paid features and
+        products, and your next billing date in your account's billing settings.
+      </p>
+    </FAQ.Answer>
+  </FAQ.Item>
+  <FAQ.Subheading>Actions & Packages</FAQ.Subheading>
+  <FAQ.Item>
+    <FAQ.Question>
+      Which plans include access to GitHub Actions and Packages?
+    </FAQ.Question>
+    <FAQ.Answer>
+      <p>
+        GitHub Actions and Packages are free for public repositories and
+        packages on all our current per-user plans, while private repositories
+        and packages receive a set amount of free minutes, storage, and data
+        transfer depending on the per-user plan. Legacy per-repository plans
+        (Bronze, Silver, Gold etc) do not come with access to GitHub Actions and
+        Packages but they can be upgraded to a current per-user plan.
+      </p>
+    </FAQ.Answer>
+  </FAQ.Item>
+  <FAQ.Item>
+    <FAQ.Question>
+      How do I manage my spending for Actions and Packages?
+    </FAQ.Question>
+    <FAQ.Answer>
+      <p>
+        You can manage your spending for Actions and Packages in your billing
+        settings page under the payment information tab.
+      </p>
+    </FAQ.Answer>
+  </FAQ.Item>
+</FAQ>
 ```
 
 ### Rendering with dynamic data
@@ -291,7 +286,7 @@ const App = () => {
           })}
         </>
       </FAQ>
-    </Container>
+
   )
 }
 
